test fileUpload tsoa
