# angular-src/src/app/swagger-api/api/auth.service.ts
@@ -1,8 +1,8 @@
 /**
- * TSOA-Node-Express
+ * TSOA-Node Express
  * TSOA-NodeExpress Documentation
  *
- * OpenAPI spec version: 1.0.0
+ * OpenAPI spec version: 1.0.1
  * 
  *
  * NOTE: This class is auto generated by the swagger code generator program.
@@ -31,7 +31,7 @@ import { Configuration }                                     from '../configurat
 @Injectable()
 export class AuthService {
 
-    protected basePath = 'https://localhost:8080/api';
+    protected basePath = 'https://localhost/api';
     public defaultHeaders = new HttpHeaders();
     public configuration = new Configuration();
 
@@ -62,7 +62,7 @@ export class AuthService {
 
     /**
      * 
-     * 
+     * Get detail information of a user
      * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
      * @param reportProgress flag to report request and response progress.
      */
@@ -104,8 +104,8 @@ export class AuthService {
 
     /**
      * 
-     * 
-     * @param loginParams 
+     * Login user
+     * @param loginParams Parameters to login
      * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
      * @param reportProgress flag to report request and response progress.
      */
@@ -150,8 +150,8 @@ export class AuthService {
 
     /**
      * 
-     * 
-     * @param requestBody 
+     * Register new user
+     * @param requestBody Parameters to register new user
      * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
      * @param reportProgress flag to report request and response progress.
      */
@@ -185,6 +185,71 @@ export class AuthService {
 
         return this.httpClient.post<IUserResponse>(`${this.basePath}/users/register`,
             requestBody,
+            {
+                withCredentials: this.configuration.withCredentials,
+                headers: headers,
+                observe: observe,
+                reportProgress: reportProgress
+            }
+        );
+    }
+
+    /**
+     * 
+     * Upload User&#39;s Profile picture
+     * @param image Profile Picture
+     * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
+     * @param reportProgress flag to report request and response progress.
+     */
+    public uploadProfilePicture(image: Blob, observe?: 'body', reportProgress?: boolean): Observable<IUserResponse>;
+    public uploadProfilePicture(image: Blob, observe?: 'response', reportProgress?: boolean): Observable<HttpResponse<IUserResponse>>;
+    public uploadProfilePicture(image: Blob, observe?: 'events', reportProgress?: boolean): Observable<HttpEvent<IUserResponse>>;
+    public uploadProfilePicture(image: Blob, observe: any = 'body', reportProgress: boolean = false ): Observable<any> {
+        if (image === null || image === undefined) {
+            throw new Error('Required parameter image was null or undefined when calling uploadProfilePicture.');
+        }
+
+        let headers = this.defaultHeaders;
+
+        // authentication (JWT) required
+        if (this.configuration.apiKeys["Authorization"]) {
+            headers = headers.set('Authorization', this.configuration.apiKeys["Authorization"]);
+        }
+
+        // to determine the Accept header
+        let httpHeaderAccepts: string[] = [
+            'application/json'
+        ];
+        let httpHeaderAcceptSelected: string | undefined = this.configuration.selectHeaderAccept(httpHeaderAccepts);
+        if (httpHeaderAcceptSelected != undefined) {
+            headers = headers.set("Accept", httpHeaderAcceptSelected);
+        }
+
+        // to determine the Content-Type header
+        let consumes: string[] = [
+            'multipart/form-data'
+        ];
+
+        const canConsumeForm = this.canConsumeForm(consumes);
+
+        let formParams: { append(param: string, value: any): void; };
+        let useForm = false;
+        let convertFormParamsToString = false;
+        // use FormData to transmit files using content-type "multipart/form-data"
+        // see https://stackoverflow.com/questions/4007969/application-x-www-form-urlencoded-or-multipart-form-data
+        useForm = canConsumeForm;
+        if (useForm) {
+            formParams = new FormData();
+        } else {
+            formParams = new HttpParams({encoder: new CustomHttpUrlEncodingCodec()});
+        }
+
+        if (image !== undefined) {
+            formParams = formParams.append('image', <any>image) || formParams;
+        }
+
+        return this.httpClient.post<IUserResponse>(`${this.basePath}/users/uploadPicture`,
+            convertFormParamsToString ? formParams.toString() : formParams,
             {
                 withCredentials: this.configuration.withCredentials,
                 headers: headers,
